--- a/assets/css/estilos.css
+++ b/assets/css/estilos.css
@@ -1,11 +1,12 @@
 body {
   font-family: "Raleway", sans-serif;
+  color: red;
 }
 
 /* Hero Section */
 
 #Hero-Section {
-  background-image: url("../img/bg-hero.jpg");
+  background-image: url("../img/dotaDire.png");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: left;
